# IntegralSolver

./: CMakeLists.txt  README.md  commons.h  main.c  main.h  math.c  math.h  process_tokens.c  process_tokens.h  tokenizer.c  tokenizer.h
